<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Music Buddy</string>
    <string name="learn_button">Learn Music!</string>
    <string name="menu_exit">Exit Music Buddy</string>
    <string name="music_on_off">Music ON/OFF</string>
    <string name="test_button">Quizzes</string>
    <string name="resources_button">Resources</string>
    <string name="logo">Logo</string>
    <string name="learn">Learn</string>
    <string name="quiz">Quiz</string>
    <string name="resources">Resources</string>
    <string name="Contact">Contact Us!</string>
    <string name="go_button">Vertical List!</string>
    <string name="treb_button">Treble Clef Notes</string>
    <string name="bass_button">Bass Clef Notes</string>
    <string name="dynamics_button">Dynamics</string>
    <string name="note_types_button">Note Types</string>
    <string name="instructions">Select the correct answer!</string>
    
    <string name="about_text">
	This application is part of an Open Source Project for Loyola University Chicago COMP 412. \nThe project is run under the GNU GPL v3 License. 
	\n\nComments, questions, and suggestions may be submitted to the Google Code Hosted project:\n
	http://code.google.com/p/music-buddy/ </string>
	<string name="about_email">mscbdd@gmail.com</string>
	
	
	<string name="treble_a">treb_a.png</string>
	<string name="treble_a1">treb_a1.png</string>
	<string name="treble_b">treb_b.png</string>
	<string name="treble_b1">treb_b1.png</string>
	<string name="treble_c">treb_c.png</string>
	<string name="treble_c1">treb_c1.png</string>
	<string name="treble_d">treb_d.png</string>
	<string name="treble_d1">treb_d1.png</string>
	<string name="treble_e">treb_e.png</string>
	<string name="treble_e1">treb_e1.png</string>
	<string name="treble_f">treb_f.png</string>
	<string name="treble_f1">treb_f1.png</string>
	<string name="treble_g">treb_g.png</string>
	<string name="treble_g1">treb_g1.png</string>
	<string name="treble_middle_c">treb_middle_c.png</string>
	<string name="treble_clef">treble_clef.png</string>
	<string name="treb_lines">treb_lines.png</string>
	<string name="treb_spaces">treb_spaces.png</string>
	
	<string name="bass_a">bass_a.png</string>
	<string name="bass_a1">bass_a1.png</string>
	<string name="bass_b">bass_b.png</string>
	<string name="bass_b1">bass_b1.png</string>
	<string name="bass_c">bass_c.png</string>
	<string name="bass_c1">bass_c1.png</string>
	<string name="bass_d">bass_d.png</string>
	<string name="bass_d1">bass_d1.png</string>
	<string name="bass_e">bass_e.png</string>
	<string name="bass_e1">bass_e1.png</string>
	<string name="bass_f">bass_f.png</string>
	<string name="bass_f1">bass_f1.png</string>
	<string name="bass_g">bass_g.png</string>
	<string name="bass_g1">bass_g1.png</string>
	<string name="bass_middle_c">bass_middle_c.png</string>
	<string name="bass_clef">bass_clef.png</string>
	<string name="bass_lines">bass_lines.png</string>
	<string name="Bass_spaces">bass_spaces.png</string>
	
	<string name="sixteenth_note">sixteenth_note.png</string>
	<string name="sixteenth_rest">sixteenth_rest.png</string>
	<string name="eighth_note">eighth_note.png</string>
	<string name="eighth_rest">eighth_rest.png</string>
	<string name="quarter_note">quarter_note.png</string>
	<string name="quarter_rest">quarter_rest.png</string>
	<string name="half_note">half_note.png</string>
	<string name="half_rest">half_rest.png</string>
	<string name="whole_note">whole_note.png</string>
	<string name="whole_rest">whole_rest.png</string>
	
	<string name="crescendo">crescendo.png</string>
	<string name="diminuendo">diminuendo.png</string>
	<string name="pianissimo">pianissimo.png</string>
	<string name="piano">piano.png</string>
	<string name="mezzo_piano">mezzo_piano.png</string>
	<string name="mezzo_forte">mezzo_forte.png</string>
	<string name="forte">forte.png</string>
	<string name="fortissimo">fortissimo.png</string>

</resources>