<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Learn" >

    <ImageView
        android:id="@+id/splashscreen"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="0.68"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/splash_logo"
        android:clickable="true" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/learn_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/learn_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/test_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/test_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/resources_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/resources"
                android:textSize="25sp" />

            <Button
                android:id="@+id/contact_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/Contact"
                android:textSize="25sp" />

        </LinearLayout>

    </ScrollView>

 </LinearLayout> 